--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,35 @@
 html, body, #root {width: 100%; height: 100%;}
 
-.map_container {
-  width: 100%;
-  height: 50%;
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.you {
-  width: 20px;
-  height: 20px;
-  border: 1px solid red;
-  background-color: white;
+
+.main_container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+.spinner_container {
+  width: 100%;
+  height: 100%;
+}
+.header {
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.logo {
+  display: flex;
+  width: 50%;
+  height: auto;
+  max-height: 178px;
+  max-width: 863px;
+
 }
