--- a/src/App.css
+++ b/src/App.css
@@ -13,23 +13,22 @@ html, body, #root {width: 100%; height: 100%;}
   flex-direction: column;
   align-content: center;
   justify-content: center;
+  padding: 0 10px 10px 10px;
 }
 .spinner_container {
   width: 100%;
   height: 100%;
 }
 .header {
-  height: 20%;
+  height: 36px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
 }
-.logo {
-  display: flex;
-  width: 50%;
-  height: auto;
-  max-height: 178px;
-  max-width: 863px;
-
+.menu {
+  border-style: none;
+  width: 32px;
+  height: 32px;
+  cursor: pointer;
 }
