--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,4 +1,6 @@
 .map_container {
     width: 100%;
-    height: 80%;
+    height: calc(100% - 36px);
+    border: 2px solid #666;
+    box-sizing: border-box;
   }
